methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=false
  for (i <- 1 to 6) {
    if(estSurBiscuit()) {
      vuBiscuit=true
    }
  }
  for (i <- 1 to 6) {
    recule()
  }
}

while(haveBaggle==false && estSurBiscuit==false) {
  droite()
  avance()
  gauche()
}